# rag-hybrid-search

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.ui  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: __init__.py  auth.py  dependencies.py  jobs.py  main.py  routes.py  schemas.py
docs/: BENCHMARK.md
eval/: questions.yaml  thresholds.yaml
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/css/: components.css  styles.css
frontend/js/: api.js  app.js  config.js  ui.js
frontend/src/: App.js  App.tsx  main.tsx
rag_hybrid_search/: audit.py  config.py  diagnostics.py  models.py  similarity.py  trace.py  uuid7.py
rag_hybrid_search/compliance/: citation_mapper.py  clause_chunker.py  clause_parser.py  query_router.py  regulation_models.py
rag_hybrid_search/ingestion/: dedup.py  pipeline.py
rag_hybrid_search/providers/: base.py  gemini.py  nvidia.py  nvidia_rerank.py  ollama.py
rag_hybrid_search/retrieval/: dense.py  fusion.py  passthrough_rerank.py  rerank.py  (+2 more)
rag_pipeline/: citation_utils.py  citation_verifier.py  confidence_scorer.py  context_builder.py  context_pruning.py  generation_provider.py  models.py  prompt_builder.py  query_decomposer.py  quote_extractor.py  rag_pipeline.py
scripts/: benchmark.py  check_baseline.py  debug_retrieval.py  run_eval.py
tests/: fakes.py  test_audit.py  test_benchmark.py  test_config.py  test_end_to_end.py  test_models.py  test_run_eval.py  test_trace.py  test_uuid7.py
ui/: app.py
(+149 files in other folders)
